--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="glass nexus-border p-8 md:p-12 rounded-[40px]">
             <h2 class="text-3xl md:text-4xl font-bold mb-4 text-center" data-en="Contact Us" data-fr="Contactez-nous">Contact Us</h2>
             <p class="text-gray-400 text-center mb-10 font-medium" data-en="Ready to automate your success? Launch your digital workforce today!" data-fr="Prêt à automatiser votre succès ? Lancez votre équipe numérique dès aujourd'hui !">Ready to automate your success? Launch your digital workforce today!</p>
-            <form action="https://formspree.io/f/your-email@example.com" method="POST" class="space-y-4">
+            <form action="https://formspree.io/f/xpqzqlyj" method="POST" class="space-y-4">
                 <input type="text" name="name" placeholder="Name / Nom" required class="w-full bg-white/5 border border-white/10 p-4 rounded-2xl outline-none focus:border-purple-500 transition">
                 <input type="text" name="company" placeholder="Company / Entreprise" required class="w-full bg-white/5 border border-white/10 p-4 rounded-2xl outline-none focus:border-purple-500 transition">
                 <input type="email" name="email" placeholder="Email / Courriel" required class="w-full bg-white/5 border border-white/10 p-4 rounded-2xl outline-none focus:border-purple-500 transition">
