--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Go Agentic Voice | AI Agency Montreal | 24/7 AI Voice Agents</title>
     
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><defs><linearGradient id='g' x1='0%22 y1='0%22 x2='100%22 y2='100%22><stop offset='0%22 style='stop-color:%236366f1;stop-opacity:1' /><stop offset='100%22 style='stop-color:%23a855f7;stop-opacity:1' /></linearGradient></defs><circle cx='50' cy='50' r='48' fill='url(%23g)'/><text y='1.15em' x='50' font-size='55' font-weight='800' font-family='Inter, sans-serif' fill='white' text-anchor='middle' dominant-baseline='middle'>GV</text></svg>">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <meta name="description" content="Go Agentic Voice: Leading AI Agency Montreal. We provide 24/7 AI Receptionists and Voice Agents integrated with your CRM to scale your business.">
     <meta name="keywords" content="AI Agency Montreal, Agence IA Montréal, AI Voice Agents, CRM Automation, Quebec AI, Law 25 Compliance">
